@@ -1,3 +1,7 @@
+2000-08-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+
+	* exult.cc/spells.cc: implemented archwizard mode cheat
+
 2000-08-25  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* spells.cc: Fixed double-click bug.  Also, check and decrement mana.
